error is solved

--- a/CareerSphere/templates/layout.html
+++ b/CareerSphere/templates/layout.html
@@ -9,9 +9,12 @@
         Default value
         {% endblock %}
     </title> 
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
     <nav> This is the navigation bar. </nav>
+    
+    <p>welcome to chai</p>
     {% block content %}{% endblock %}
     
 </body>
