--- a/CareerSphere/templates/website/index.html
+++ b/CareerSphere/templates/website/index.html
@@ -3,5 +3,5 @@
 {% block title %}CareerSphereHome{% endblock %}
 
 {% block content %} 
-<h1>Welcome to CareerSphere</h1>
+<h1>Welcome to CareerSphere | Home page </h1>
 {% endblock %}
