--- a/CareerSphere/chai/templates/chai/all_chai.html
+++ b/CareerSphere/chai/templates/chai/all_chai.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">        
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Chai Products</title>
-    <link rel="stylesheet" href="/static/style.css">
-</head>
-<body>
-    <h1>All Chai Products</h1>
-    <p>Welcome to the Chai products page!</p>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block title %}CareerSphereHome{% endblock %}
+
+{% block content %} 
+<h1>All chai| Home page </h1>
+{% endblock %}
